sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:11: error: type mismatch;
 found   : Int
 required: Boolean
      } else if (!ecritV&&j){
                          ^