sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {
  var v = 0
  var ecritV=false
  for (i<-1 to getNombreValeurs()-1){
    v = getValeur(i)
    ecritV=false
    for(j<-i-1 to 1 by -1){  
      if (!plusPetitQue(j,v) && !ecritV ){
        copie(j,j+1)
      } else if (!ecritV&&j){
        setValeur(j,v)
        ecritV=true
      }
    }
  }
}